--- a/WeatherSample/app/src/main/res/values/strings.xml
+++ b/WeatherSample/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">お天気情報</string>
     <string name="tv_winfo_title">お天気詳細</string>
+    <string name="tv_telop" />
 </resources>
